--- a/L01/index.html
+++ b/L01/index.html
@@ -4,6 +4,10 @@
     <meta name="SEG3185_lab01" content="Survey Page">
     <title> Youtube Survey </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="background">
@@ -23,6 +27,12 @@
             </p>
 
 
+        </div>
+
+        <div id="screenshot-container">
+            <a href="https://www.youtube.com/">
+                <img id="page-img" src="images/screenshot.png">
+            </a>
         </div>
 
         <div class="text-container"></div>
