--- a/L01/index.html
+++ b/L01/index.html
@@ -13,7 +13,7 @@
     <section class="background">
     
         <div class="text-container">
-            <h1> Youtube Survey </h1>
+            <h1 class="heading"> Youtube Survey </h1>
             <a href="https://www.youtube.com/"> 
                 <span class="text-transparent">Link to Youtube Platform</span> 
             </a>
