--- a/L01/index.html
+++ b/L01/index.html
@@ -65,6 +65,9 @@
             </form>
         </div>
 
+        <h3 id="comments-header">Comments</h3>
+        <textarea id="comment-textarea" placeholder="Write a comment here.">
+        </textarea>
 
         <div>
             <p style="color:white;">
