--- a/L01/index.html
+++ b/L01/index.html
@@ -81,9 +81,9 @@
 
 
         <div>
-            <p style="color:white;">
+            <p>
                 Website designed by:<br>
-                Xiaoyang Wang 
+                Xiaoyang Wang <br>
                 Derek Hacault-Parodi
             </p>
         </div>
