--- a/L01/index.html
+++ b/L01/index.html
@@ -74,14 +74,15 @@
                 <label for="Others"> Others </label>
                 <br><br>
 
+                <h3 id="comments-header">Comments</h3>
+                <textarea id="comment-textarea" placeholder="Write a comment here.">
+                </textarea>
+                <br>
 
-
+                <button id="submit-btn">Submit</button>
             </form>
         </div>
 
-        <h3 id="comments-header">Comments</h3>
-        <textarea id="comment-textarea" placeholder="Write a comment here.">
-        </textarea>
 
         <div>
             <p style="color:white;">
