Fixed file structure

--- a/index.html
+++ b/index.html
@@ -74,16 +74,20 @@
                 <label for="Others"> Others </label>
                 <br><br>
 
+                <h3 id="comments-header">Comments</h3>
+                <textarea id="comment-textarea" placeholder="Write a comment here.">
+                </textarea>
+                <br>
 
-
+                <button id="submit-btn">Submit</button>
             </form>
         </div>
 
 
         <div>
-            <p style="color:white;">
+            <p>
                 Website designed by:<br>
-                Xiaoyang Wang 
+                Xiaoyang Wang <br>
                 Derek Hacault-Parodi
             </p>
         </div>
