Does image work now?

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <br><br>
             <a href="https://www.youtube.com/"> 
-                <img src="images/youtube.jpg"/> 
+                <img src="images/youtube.JPG"/> 
             </a>
             <p>Thank you for participating in our survey. 
                 This short survey will only take a few minutes of your time, 
