--- a/index.html
+++ b/index.html
@@ -74,31 +74,22 @@
                 <label for="Others"> Others </label>
                 <br><br>
 
-                <h3 id="comments-header">Comments</h3>
+                <h3 id="comments-header">Q.6 Any other thoughts on Youtube.com?</h3>
                 <textarea id="comment-textarea" placeholder="Write a comment here.">
                 </textarea>
                 <br>
 
-                <button id="submit-btn">Submit</button>
+                <button id="submit-btn" type="submit" value="Submit">Submit</button>
             </form>
         </div>
 
 
-        <div>
+        <div id="signatures-container">
             <p>
-                Website designed by:<br>
-                Xiaoyang Wang <br>
-                Derek Hacault-Parodi
+                Website designed by: Xiaoyang Wang, Derek Hacault-Parodi, Steven Li Wing
             </p>
         </div>
 
     </section>
-
-
-
-
-   
-     
-    
 </body>
 </html>
